# app/controllers/list_tasks_controller.rb
@@ -1,9 +1,10 @@
 class ListTasksController < ApplicationController
   before_action :get_board
   before_action :get_board_list
+  before_action :get_list_task, only: [:assign_user, :unassign_user, :users]
 
   def index
-    render json: @board_list.list_tasks.select(:id, :name, :board_list_id)
+    render json: @board_list.list_tasks.select(:id, :name, :board_list_id, :description)
   end
 
   def create
@@ -37,6 +38,32 @@ class ListTasksController < ApplicationController
     render json: {error: $!.message}, status: :bad_request
   end
 
+  def assign_user
+    raise ActiveRecord::RecordNotFound, "Task not found" if @list_task.blank?
+    user = User.where(id: assign_user_params[:user_id]).select(:id, :full_name, :email).first
+    raise ActiveRecord::RecordNotFound, "User not found" if user.blank?
+    @board.board_users.find_or_create_by!(user_id: user.id)
+    task_user = @list_task.task_users.find_or_create_by!(user_id: user.id)
+    render json: task_user
+  rescue
+    render json: {error: $!.message}, status: :bad_request
+  end
+
+  def unassign_user
+    raise ActiveRecord::RecordNotFound, "Task not found" if @list_task.blank?
+    user = User.where(id: assign_user_params[:user_id]).select(:id, :full_name, :email).first
+    raise ActiveRecord::RecordNotFound, "User not found" if user.blank?
+    task_user = @list_task.task_users.find_by(user_id: user.id)
+    task_user.destroy if task_user.present?
+    render json: {}, status: :ok
+  rescue
+    render json: {error: $!.message}, status: :bad_request
+  end
+
+  def users
+    render json: @list_task.users.select(:id, :full_name, :email)
+  end
+
   private
 
   def list_task_create_params
@@ -47,11 +74,21 @@ class ListTasksController < ApplicationController
     params.require(:list_task).permit!
   end
 
+  def assign_user_params
+    params.require(:task_user).permit!
+  end
+
   def get_board
     @board = Board.find params[:board_id]
   end
 
   def get_board_list
     @board_list = @board.board_lists.find params[:board_list_id]
+  rescue
+    render json: {error: $!.message}, status: :bad_request
+  end
+
+  def get_list_task
+    @list_task = @board_list.list_tasks.find params[:id]
   end
 end
